create github pages

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section form1 cid-r9omLLq6x8" id="form1-z">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section form1 cid-r9omLLq6x8" id="form1-z">
 
     
 
@@ -75,7 +75,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Bedankt om het formulier in te vullen!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="IaxOL/R5n0k18n+Dr0KDFQivrvVbB9eDM0tc+h+9EnGtflU1iGiwj44eAomrhAkvrbL0/vVMKsEMfOvaTCVUmJ0tZVVglOKnJ2/CLpn4QTpvNAF9LSLTv/tbyfKzglzN">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="yckGLHTpM55sx3xpVYt55VxXmFW8F8rIMGtwUXXAVzepQHc1UX8EtEQZolZeTHgM6BfQgbYs7rAUO42vz+HN57kaVLs8E/9qJBr10rveq2usLh8v4MFJEq5XaFaUJSut">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
